--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -31,6 +31,9 @@
                     <sdk>
                         <platform>19</platform>
                     </sdk>
+                    <sign>
+                        <debug>false</debug>
+                    </sign>
                     <deleteConflictingFiles>true</deleteConflictingFiles>
                     <undeployBeforeDeploy>true</undeployBeforeDeploy>
                 </configuration>
